# trabalho_conclusao_t1_ifgo

./: .gitignore  main.py  pyproject.toml
notebooks/: 01_exploracao_tse.ipynb  02_modelage_grafo.ipynb  Resposta_Trabalho_Trilha_I.ipynb  Template_Trabalho_Trilha_I.ipynb  Trabalho_Trilha_I.aux  Trabalho_Trilha_I.blg  Trabalho_Trilha_I.ipynb  Trabalho_Trilha_I.out  Trabalho_Trilha_I.tex  dijkstra_search_functions.py  referencias.bib  requisitos_sistema.txt  temp_limpo.ipynb
src/: download_tse.py  graph_builder.py  inspect_tse_zip.py  tse_io.py
